feat: Greeks quality fixes, tooltips, OI/PCR, sub-val styling
Backend:
- IbkrDispatcher: add Double.isFinite() guards in tickOptionComputation to
  reject IBKR sentinel values (Double.MAX_VALUE, Infinity) for impliedVol,
  gamma, vega, theta, optPrice, undPrice
- IbkrDispatcher: add reqUnderlyingPrice with empty genericTickList; remove
  snapshot mode overload (fixes IBKR error 321)
- OptionsChainService: sequential spot fetch, 5000ms off-hours timeout,
  futuresConId preference in buildUnderlyingContract, empty-row filtering
- Add delayed tick field IDs (68/69/70/75) in tickPrice/tickSize handlers

Frontend (StrategyBuilder, GreeksSummary, ChainTable, StrategyHealthCard):
- GreeksSummary: Number.isFinite() in sum() fixes Infinity in Net Vega/Theta;
  add PCR card; add tooltips for IBKR Greeks, Call/Put Δ Total, Net Vega/Theta
- StrategyBuilder: Greeks quality warning banner when any leg has
  greeksSource !== IBKR
- StrategyHealthCard: HcTooltip on PoP, IV Rank, IV/HV, 1-SD Move,
  Break-evens, DTE, Liquidity
- ChainTable: Number.isFinite() in fmt(); OI sub-line under Latest;
  fix missing .sub-val CSS rule

Tests: updated IbkrDispatcherTest and OptionsChainServiceTest for new API

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>